Primer Ruby
C:\Sites>"Hola Mundo"
""Hola Mundo"" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\Sites>irb
irb(main):001:0> "Hola Mundo"
=> "Hola Mundo"
irb(main):002:0> "Hola Mundo"
=> "Hola Mundo"
irb(main):003:0> puts "Hola Mundo"
Hola Mundo
=> nil
irb(main):004:0> 3+2
=> 5
irb(main):005:0> 3*2
=> 6
irb(main):006:0> 3**2
=> 9
irb(main):007:0> Math.sqrt(9)
=> 3.0
irb(main):008:0> a= 3**2
=> 9
irb(main):009:0> b= 4**2
=> 16
irb(main):010:0> Math.sqrt (a+b)
=> 5.0
irb(main):011:0> def h
irb(main):012:1> puts "Hola Mundo"
irb(main):013:1> end
=> nil
irb(main):014:0> h
Hola Mundo
=> nil
irb(main):015:0> h
Hola Mundo
=> nil
irb(main):016:0> def h(Fanny)
irb(main):017:1> #puts "Hola
irb(main):018:1*
irb(main):019:1* #
irb(main):020:1* def h(Fanny)
irb(main):021:2> #puts "Hola
irb(main):022:2* puts "Hola #{Fanny}"
irb(main):023:2> end
irb(main):024:1> def h(Fanny)
irb(main):025:2> puts "Hola #{Fanny}"
irb(main):026:2> end
irb(main):027:1> h("Fanny")
irb(main):028:1> def h (nombre)
irb(main):029:2> puts "Hola #{nombre}"
irb(main):030:2> end
irb(main):031:1> def h(nombre)
irb(main):032:2> puts "Hola #{nombre}"
irb(main):033:2> end
irb(main):034:1> h
irb(main):035:1> end
SyntaxError: (irb):16: formal argument cannot be a constant
def h(Fanny)
           ^
(irb):20: formal argument cannot be a constant
def h(Fanny)
           ^
(irb):24: formal argument cannot be a constant
def h(Fanny)
           ^
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):036:0> def h(nombre)
irb(main):037:1> puts "Hola #{nombre}"
irb(main):038:1> end
=> nil
irb(main):039:0> h("Matz")
Hola Matz
=> nil
irb(main):040:0> def h(nombre = "Mundo")
irb(main):041:1> puts "Hola #{nombre.capitalize}"
irb(main):042:1> end
=> nil
irb(main):043:0> h "fanny"
Hola Fanny
=> nil
irb(main):044:0> h
Hola Mundo
=> nil
irb(main):045:0> class Anfitrion
irb(main):046:1> def initialize (nombre = "Mundo")
irb(main):047:2> @nombre = nombre
irb(main):048:2> end
irb(main):049:1> def decir_hola
irb(main):050:2> puts "Hola #{@nombre}"
irb(main):051:2> end
irb(main):052:1> def decir_adios
irb(main):053:2> puts "Adios #{@nombre}, vuelve pronto."
irb(main):054:2> end
irb(main):055:1> end
=> nil
irb(main):056:0> Anfitrion.new("Fanny")
=> #<Anfitrion:0x2afbaa8 @nombre="Fanny">
irb(main):057:0> a.decir_hola
NoMethodError: undefined method `decir_hola' for 9:Fixnum
        from (irb):57
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):058:0> a.decir_hola
NoMethodError: undefined method `decir_hola' for 9:Fixnum
        from (irb):58
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):059:0> a.decir_hola
NoMethodError: undefined method `decir_hola' for 9:Fixnum
        from (irb):59
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):060:0> a= Anfitrion.new("Fanny")
=> #<Anfitrion:0x765288 @nombre="Fanny">
irb(main):061:0> a.decir_hola
Hola Fanny
=> nil
irb(main):062:0> a.decir_adios
Adios Fanny, vuelve pronto.
=> nil
<ombre}, vuelve pronto.""Adis #{@nombre}, vuelve pronto."^C
irb(main):063:0>
class Anfitrion
  def initialize (nombre= "Mundo")
    @nombre = nombre
  end
  def decir_hola
    puts "Hola #{@nombre}"
  end
  def decir_adios
    puts "Adios #{@nombre}, vuelve pronto."
  end
end


C:\Sites>irb
irb(main):001:0> Anfitrion.new("Fanny")
NameError: uninitialized constant Anfitrion
        from (irb):1
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):002:0> a = Anfitrion.new("Fanny")
NameError: uninitialized constant Anfitrion
        from (irb):2
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):003:0> class Anfitrion
irb(main):004:1> def initialize(nombre = "Mundo")
irb(main):005:2> @nombre = nombre
irb(main):006:2> end
irb(main):007:1> def decir_hola
irb(main):008:2> puts "Hola #{@nombre}"
irb(main):009:2> end
irb(main):010:1> def decir_adios
irb(main):011:2> puts "Adios #{@nombre}, vuelve pronto."
irb(main):012:2> end
irb(main):013:1> end
=> nil
irb(main):014:0> a = Anfitrion.new("Fanny")
=> #<Anfitrion:0x2e12230 @nombre="Fanny">
irb(main):015:0> a.decir_hola
Hola Fanny
=> nil
irb(main):016:0> a.decir_adios
Adios Fanny, vuelve pronto.
=> nil
irb(main):017:0> Anfitrion.instance_methods
=> [:decir_hola, :decir_adios, :nil?, :===, :=~, :!~, :eql?, :hash, :<=>, :class
, :singleton_class, :clone, :dup, :initialize_dup, :initialize_clone, :taint, :t
ainted?, :untaint, :untrust, :untrusted?, :trust, :freeze, :frozen?, :to_s, :ins
pect, :methods, :singleton_methods, :protected_methods, :private_methods, :publi
c_methods, :instance_variables, :instance_variable_get, :instance_variable_set,
:instance_variable_defined?, :instance_of?, :kind_of?, :is_a?, :tap, :send, :pub
lic_send, :respond_to?, :respond_to_missing?, :extend, :display, :method, :publi
c_method, :define_singleton_method, :object_id, :to_enum, :enum_for, :==, :equal
?, :!, :!=, :instance_eval, :instance_exec, :__send__, :__id__]
irb(main):018:0> Anfitrion.instance_methods(false)
=> [:decir_hola, :decir_adios]
irb(main):019:0> a.respond_to?(nombre)
NameError: undefined local variable or method `nombre' for main:Object
        from (irb):19
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):020:0> a.respond_to?("nombre")
=> false
irb(main):021:0> a-respond_to?("decir_hola")
NoMethodError: undefined method `-' for #<Anfitrion:0x2e12230 @nombre="Fanny">
        from (irb):21
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):022:0> a.respond_to?("decir_hola")
=> true
irb(main):023:0> a.respond_to?("decir_adios")
=> true
irb(main):024:0> a.respond_to?("to_s")
=> true
irb(main):025:0> class Anfitrion
irb(main):026:1> attr_accesor :nombre
irb(main):027:1> end
NoMethodError: undefined method `attr_accesor' for Anfitrion:Class
        from (irb):26:in `<class:Anfitrion>'
        from (irb):25
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):028:0> class Anfitrion
irb(main):029:1> attr_accesor :Fanny
irb(main):030:1> end
NoMethodError: undefined method `attr_accesor' for Anfitrion:Class
        from (irb):29:in `<class:Anfitrion>'
        from (irb):28
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):031:0> class Anfitrion
irb(main):032:1> attr_accessor :nombre
irb(main):033:1> end
=> nil
irb(main):034:0> Anfitrion.new("Steffi")
=> #<Anfitrion:0x2e11960 @nombre="Steffi">
irb(main):035:0> a.respond_to?("nombre")
=> true
irb(main):036:0> a.respond_to?("nombre=")
=> true
irb(main):037:0> a.decir=hola
NameError: undefined local variable or method `hola' for main:Object
        from (irb):37
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):038:0> a.decir_hola
Hola Fanny
=> nil
irb(main):039:0> a.nombre="Steffi"
=> "Steffi"
irb(main):040:0> a
=> #<Anfitrion:0x2e12230 @nombre="Steffi">
irb(main):041:0> a.nombre
=> "Steffi"
irb(main):042:0>
irb(main):043:0* a.decir_hola
Hola Steffi
=> nil
irb(main):044:0> Anfitrion.new("Steffi")
=> #<Anfitrion:0x2c77938 @nombre="Steffi">
irb(main):045:0> a.respond_to?("nombre")
=> true
irb(main):046:0> a.respond_to?("nombre=")
=> true
irb(main):047:0> a.decir_hola
Hola Steffi
=> nil
irb(main):048:0> a.nombre="Steffi"
=> "Steffi"
irb(main):049:0> a
=> #<Anfitrion:0x2e12230 @nombre="Steffi">
irb(main):050:0> a.nombre
=> "Steffi"
irb(main):051:0> a.decir_hola
Hola Steffi
=> nil
